# amp

./: Cargo.toml  README.md
docs/: README.md  _config.yml  index.md
docs/_pages/: about.md
docs/_pages/Headphones/: LinkBuds S.md
src/: error.rs  lib.rs  manager.rs
src/devices/: mod.rs  properties.rs  traits.rs
