[package]
name = "ohm-amp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.1"
libc = "0.2.149"
log = "0.4.20"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["macros", "rt"] }
